{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 70,
  "lineage": "1e267c77-4a66-d718-f5e3-f9b7f591aac3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e11aecb0deb27523",
            "arn": "arn:aws:ec2:us-east-1:992382567875:elastic-ip/eipalloc-0e11aecb0deb27523",
            "domain": "vpc",
            "id": "eipalloc-0e11aecb0deb27523",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-198-236-207.compute-1.amazonaws.com",
            "public_ip": "44.198.236.207",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e31863b8e1f70a5",
            "arn": "arn:aws:ec2:us-east-1:992382567875:instance/i-07f043660f3ec160a",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07f043660f3ec160a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pryimak",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f77c821f1426adf7",
            "private_dns": "ip-10-0-66-227.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.66.227",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c1e191b61355e07",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0ed10efc0a02c927d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0569e7a8a9727b854",
            "tags": {
              "Name": "pryimak-private",
              "homework": "hw",
              "student": "pryimak"
            },
            "tags_all": {
              "Name": "pryimak-private",
              "homework": "hw",
              "student": "pryimak"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed10efc0a02c927d"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_ami.ubuntu",
            "tls_private_key.student"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e31863b8e1f70a5",
            "arn": "arn:aws:ec2:us-east-1:992382567875:instance/i-030ec80b02ff98789",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-030ec80b02ff98789",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pryimak",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-041ad4425b96a616d",
            "private_dns": "ip-10-0-52-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.52.251",
            "public_ip": "3.87.92.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00f21b9b68d07f42c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0cc8ccff5eb9bcfd0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0687406403b45745c",
            "tags": {
              "Name": "pryimak-public",
              "homework": "hw",
              "student": "pryimak"
            },
            "tags_all": {
              "Name": "pryimak-public",
              "homework": "hw",
              "student": "pryimak"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cc8ccff5eb9bcfd0"
            ]
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_ami.ubuntu",
            "tls_private_key.student"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:internet-gateway/igw-04b7b9b3e2f9fea17",
            "id": "igw-04b7b9b3e2f9fea17",
            "owner_id": "992382567875",
            "tags": {
              "Name": "pryimak-ig",
              "homework": "hw",
              "student": "pryimak"
            },
            "tags_all": {
              "Name": "pryimak-ig",
              "homework": "hw",
              "student": "pryimak"
            },
            "vpc_id": "vpc-0cbd5469fc1d80350"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e11aecb0deb27523",
            "association_id": "eipassoc-05a34228a4b0f686d",
            "connectivity_type": "public",
            "id": "nat-0b17e48f7347e9e34",
            "network_interface_id": "eni-0f08f7f0c4523c7cc",
            "private_ip": "10.0.52.220",
            "public_ip": "44.198.236.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0687406403b45745c",
            "tags": {
              "Name": "pryimak-nat",
              "homework": "hw",
              "student": "pryimak"
            },
            "tags_all": {
              "Name": "pryimak-nat",
              "homework": "hw",
              "student": "pryimak"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d57f881605aafca51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b17e48f7347e9e34",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d57f881605aafca5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.ig",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04b7b9b3e2f9fea17",
            "id": "r-rtb-07d1c11f528901bd91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07d1c11f528901bd9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_route_table.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:route-table/rtb-0d57f881605aafca5",
            "id": "rtb-0d57f881605aafca5",
            "owner_id": "992382567875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pryimak-private",
              "homework": "hw",
              "student": "pryimak"
            },
            "tags_all": {
              "Name": "pryimak-private",
              "homework": "hw",
              "student": "pryimak"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbd5469fc1d80350"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:route-table/rtb-07d1c11f528901bd9",
            "id": "rtb-07d1c11f528901bd9",
            "owner_id": "992382567875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "pryimak-public",
              "homework": "hw",
              "student": "pryimak"
            },
            "tags_all": {
              "Name": "pryimak-public",
              "homework": "hw",
              "student": "pryimak"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbd5469fc1d80350"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b00ab607870daf8",
            "route_table_id": "rtb-0d57f881605aafca5",
            "subnet_id": "subnet-0569e7a8a9727b854"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054267ad3afe0826e",
            "route_table_id": "rtb-07d1c11f528901bd9",
            "subnet_id": "subnet-0687406403b45745c"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:security-group/sg-0ed10efc0a02c927d",
            "description": "Private security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed10efc0a02c927d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.52.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "pryimak-private-sg",
            "name_prefix": "",
            "owner_id": "992382567875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pryimak-private-sg",
              "homework": "hw",
              "student": "pryimak"
            },
            "tags_all": {
              "Name": "pryimak-private-sg",
              "homework": "hw",
              "student": "pryimak"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbd5469fc1d80350"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:security-group/sg-0cc8ccff5eb9bcfd0",
            "description": "Public security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc8ccff5eb9bcfd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "pryimak-public-sg",
            "name_prefix": "",
            "owner_id": "992382567875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pryimak-public-sg",
              "homework": "hw",
              "student": "pryimak"
            },
            "tags_all": {
              "Name": "pryimak-public-sg",
              "homework": "hw",
              "student": "pryimak"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbd5469fc1d80350"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:subnet/subnet-0569e7a8a9727b854",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.66.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0569e7a8a9727b854",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "992382567875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pryimak-private",
              "homework": "hw",
              "student": "pryimak"
            },
            "tags_all": {
              "Name": "pryimak-private",
              "homework": "hw",
              "student": "pryimak"
            },
            "vpc_id": "vpc-0cbd5469fc1d80350"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:subnet/subnet-0687406403b45745c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.52.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0687406403b45745c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382567875",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pryimak-public",
              "homework": "hw",
              "student": "pryimak"
            },
            "tags_all": {
              "Name": "pryimak-public",
              "homework": "hw",
              "student": "pryimak"
            },
            "vpc_id": "vpc-0cbd5469fc1d80350"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:992382567875:vpc/vpc-0cbd5469fc1d80350",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a712d2e8ca0ae91a",
            "default_route_table_id": "rtb-04b13c11fa91be378",
            "default_security_group_id": "sg-09d06739862f45999",
            "dhcp_options_id": "dopt-014e0f91e84e84975",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cbd5469fc1d80350",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04b13c11fa91be378",
            "owner_id": "992382567875",
            "tags": {
              "Name": "pryimak-vpc",
              "homework": "hw",
              "student": "pryimak"
            },
            "tags_all": {
              "Name": "pryimak-vpc",
              "homework": "hw",
              "student": "pryimak"
            }
          }
        }
      ]
    }
  ]
}